--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <article class="game-widget" role="article" aria-label="tower defense article">
                     <img src="./img/game.jpg" alt="tower defense">
                     <h3 role="text" aria-label="game title">Idle Space-Fight</h3>
-                    <p role="contentinfo" aria-label="game genre">DEFENCE, STRATEGY, IDLE</p>
+                    <p role="contentinfo" aria-label="game genre">IDLE, STRATEGY</p>
                 </article>
                 <article class="game-widget" role="article" aria-label="mad fisher article">
                     <img src="./img/game.jpg" alt="mad fisher">
