--- a/policy.html
+++ b/policy.html
@@ -19,7 +19,8 @@
             </div>
         </header>
         <main>
-
+            I don't store your data for anything more than analytics and displaying ads in games. And I never ever store personal data.
+            The only data that gets collected is your device ID if you click allow, I hope you will because I earn 10x as much from the ads you watch that way!
         </main>
         <footer>
             <p>All rights reserved &copy; Blindsided Games 2022 / <a class="tab-active" href="./policy.html">Policy</a></p>
