--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
         <main>
             <section class="games">
                 <article class="game-widget" role="article" aria-label="rocket mania article">
-                    <img src="./img/game.jpg" alt="rocket mania">
+                    <img src="./img/RocketMania.png" alt="rocket mania">
                     <h3 role="text" aria-label="game title">Rocket Mania</h3>
                     <p role="contentinfo" aria-label="game genre">RACING, EXPLORING, 2D PLATFORMER</p>
                 </article>
-                <article class="game-widget" role="article" aria-label="tower defense article">
+                <article class="game-widget" role="article" aria-label="idle spaceflight article">
                     <img src="./img/game.jpg" alt="tower defense">
                     <h3 role="text" aria-label="game title">Idle Space-Fight</h3>
-                    <p role="contentinfo" aria-label="game genre">IDLE, STRATEGY</p>
+                    <p role="contentinfo" aria-label="game genre">INCREMENTAL, STRATEGY</p>
                 </article>
                 <article class="game-widget" role="article" aria-label="mad fisher article">
                     <img src="./img/game.jpg" alt="mad fisher">
-                    <h3 role="text" aria-label="game title">Mad Fisher</h3>
-                    <p role="contentinfo" aria-label="game genre">CASUAL, FISHING, IDLE</p>
+                    <h3 role="text" aria-label="game title">Madcat Fishing</h3>
+                    <p role="contentinfo" aria-label="game genre">CASUAL, FISHING, INCREMENTAL</p>
                 </article>
             </section>
         </main>
