--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <p role="contentinfo" aria-label="game genre">RACING, EXPLORING, 2D PLATFORMER</p>
                 </article>
                 <article class="game-widget" role="article" aria-label="idle spaceflight article">
-                    <img src="./img/game.jpg" alt="tower defense">
+                    <img src="./img/IdleSpaceflight.png" alt="tower defense">
                     <h3 role="text" aria-label="game title">Idle Space-Fight</h3>
                     <p role="contentinfo" aria-label="game genre">INCREMENTAL, STRATEGY</p>
                 </article>
