--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
                     <h3 role="text" aria-label="game title">Idle Space-Fight</h3>
                     <p role="contentinfo" aria-label="game genre">INCREMENTAL, STRATEGY</p>
                 </article>
-                <article class="game-widget" role="article" aria-label="mad fisher article">
+               <!-- <article class="game-widget" role="article" aria-label="mad fisher article">
                     <img src="./img/game.jpg" alt="mad fisher">
                     <h3 role="text" aria-label="game title">Madcat Fishing</h3>
                     <p role="contentinfo" aria-label="game genre">CASUAL, FISHING, INCREMENTAL</p>
-                </article>
+                </article> -->
             </section>
         </main>
         <footer>
