--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./img/logo.jpg" type="image/jpg">
     <title>Games | Blindsided Games </title>
+    <meta name="theme-color" content="#673AAC">
     <link rel="stylesheet" href="./style.css">
     <!-- <script src="./main.js"></script> -->
 </head>
