--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="RocketMania" content="app-id=1622522530">
     <link rel="shortcut icon" href="./img/logo.jpg" type="image/jpg">
     <title>Games | Blindsided Games </title>
     <meta name="theme-color" content="#673AAC">
