--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="apple-itunes-app" content="app-id=1622522530">
+    <meta name="theme-color" content="#94498d" media="(prefers-color-scheme: light)">
+    <meta name="theme-color" content="#0ee945" media="(prefers-color-scheme: dark)">
     <link rel="shortcut icon" href="./img/logo.jpg" type="image/jpg">
     <title>Games | Blindsided Games </title>
-    <meta name="theme-color" content="#673AAC">
     <link rel="stylesheet" href="./style.css">
     <!-- <script src="./main.js"></script> -->
 </head>
