--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,61 +10,72 @@
     <link rel="stylesheet" href="./style.css">
     <!-- <script src="./main.js"></script> -->
 </head>
-    <body>
-        <header>
-            <a class="logo" href="./index.html"><img src="./img/logo.jpg" alt="Blindsided Games"></a>
-            <div class="tabs">
-                <a href="./index.html">Games</a>
-                <a href="./about.html" class="tab-active">About</a>
-                <a href="./contact.html">Contact</a>
+
+<body>
+    <header>
+        <a class="logo" href="./index.html"><img src="./img/logo.jpg" alt="Blindsided Games"></a>
+        <div class="tabs">
+            <a href="./index.html">Games</a>
+            <a href="./about.html" class="tab-active">About</a>
+            <a href="./contact.html">Contact</a>
+        </div>
+    </header>
+    <main>
+        <section class="about-me">
+            <img class="about-portrait" src="./img/logo.jpg" alt="blindsided games">
+            <div class="about-info">
+                <h3 class="about-title">A short story about BlindsidedGames</h3>
+                <p class="about-text">
+                    Now this is a story all about how <br>
+                    My life got flipped turned upside down <br>
+                    And I'd like to take a minute, just sit right there <br>
+                    I'll tell you how I became the prince of a studio called Blindsided Games
+                </p>
             </div>
-        </header>
-        <main>
-            <section class="about-me">
-                <img class="about-portrait" src="./img/logo.jpg" alt="blindsided games">
-                <div class="about-info">
-                    <h3 class="about-title">A short story about BlindsidedGames</h3>                    
-                    <p class="about-text">
-                        Now this is a story all about how <br>
-                        My life got flipped turned upside down <br>
-                        And I'd like to take a minute, just sit right there <br>
-                        I'll tell you how I became the prince of a studio called Blindsided Games
-                    </p>
-                </div>
-            </section>
-            <section class="socials">
-                <a href="https://discord.gg/6HF6fuat4v" target="_blank"> <!-- discord -->
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 96" style="fill: var(--colour-black)">
-                        <path d="M107.7,8.07A105.15,105.15,0,0,0,81.47,0a72.06,72.06,0,0,0-3.36,6.83A97.68,97.68,0,0,0,49,6.83,72.37,72.37,0,0,0,45.64,0,105.89,105.89,0,0,0,19.39,8.09C2.79,32.65-1.71,56.6.54,80.21h0A105.73,105.73,0,0,0,32.71,96.36,77.7,77.7,0,0,0,39.6,85.25a68.42,68.42,0,0,1-10.85-5.18c.91-.66,1.8-1.34,2.66-2a75.57,75.57,0,0,0,64.32,0c.87.71,1.76,1.39,2.66,2a68.68,68.68,0,0,1-10.87,5.19,77,77,0,0,0,6.89,11.1A105.25,105.25,0,0,0,126.6,80.22h0C129.24,52.84,122.09,29.11,107.7,8.07ZM42.45,65.69C36.18,65.69,31,60,31,53s5-12.74,11.43-12.74S54,46,53.89,53,48.84,65.69,42.45,65.69Zm42.24,0C78.41,65.69,73.25,60,73.25,53s5-12.74,11.44-12.74S96.23,46,96.12,53,91.08,65.69,84.69,65.69Z"/>
-                    </svg>
-                </a>
-                <a href="https://twitter.com/BlindsidedGames" target="_blank"> <!-- twitter -->
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 245 205" style="fill: var(--colour-black)">
-                        <path d="M221.95,51.29c0.15,2.17,0.15,4.34,0.15,6.53c0,66.73-50.8,143.69-143.69,143.69v-0.04   C50.97,201.51,24.1,193.65,1,178.83c3.99,0.48,8,0.72,12.02,0.73c22.74,0.02,44.83-7.61,62.72-21.66   c-21.61-0.41-40.56-14.5-47.18-35.07c7.57,1.46,15.37,1.16,22.8-0.87C27.8,117.2,10.85,96.5,10.85,72.46c0-0.22,0-0.43,0-0.64   c7.02,3.91,14.88,6.08,22.92,6.32C11.58,63.31,4.74,33.79,18.14,10.71c25.64,31.55,63.47,50.73,104.08,52.76   c-4.07-17.54,1.49-35.92,14.61-48.25c20.34-19.12,52.33-18.14,71.45,2.19c11.31-2.23,22.15-6.38,32.07-12.26   c-3.77,11.69-11.66,21.62-22.2,27.93c10.01-1.18,19.79-3.86,29-7.95C240.37,35.29,231.83,44.14,221.95,51.29z"/>
-                    </svg>
-                </a>
-                <a href="https://www.youtube.com/channel/UCaXTMEgs5frcTPvw9xq6NFw" target="_blank"> <!-- youtube -->
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 158 110">
-                        <path fill="var(--colour-black)" d="M154.3,17.5c-1.8-6.7-7.1-12-13.8-13.8c-12.1-3.3-60.8-3.3-60.8-3.3S31,0.5,18.9,3.8    c-6.7,1.8-12,7.1-13.8,13.8C1.9,29.7,1.9,55,1.9,55s0,25.3,3.3,37.5c1.8,6.7,7.1,12,13.8,13.8c12.1,3.3,60.8,3.3,60.8,3.3    s48.7,0,60.8-3.3c6.7-1.8,12-7.1,13.8-13.8c3.3-12.1,3.3-37.5,3.3-37.5S157.6,29.7,154.3,17.5z"/>
-                        <polygon fill="var(--colour-white)" points="64.2,78.4 104.6,55 64.2,31.6"/>
-                    </svg>
-                </a>
-                <a href="https://blindsidedgames.itch.io/" target="_blank"> <!-- itchio -->
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 245.371 220.736" style="fill: var(--colour-black)">
-                        <path d="M31.99 1.365C21.287 7.72.2 31.945 0 38.298v10.516C0 62.144 12.46 73.86 23.773 73.86c13.584 0 24.902-11.258 24.903-24.62 0 13.362 10.93 24.62 24.515 24.62 13.586 0 24.165-11.258 24.165-24.62 0 13.362 11.622 24.62 25.207 24.62h.246c13.586 0 25.208-11.258 25.208-24.62 0 13.362 10.58 24.62 24.164 24.62 13.585 0 24.515-11.258 24.515-24.62 0 13.362 11.32 24.62 24.903 24.62 11.313 0 23.773-11.714 23.773-25.046V38.298c-.2-6.354-21.287-30.58-31.988-36.933C180.118.197 157.056-.005 122.685 0c-34.37.003-81.228.54-90.697 1.365zm65.194 66.217a28.025 28.025 0 0 1-4.78 6.155c-5.128 5.014-12.157 8.122-19.906 8.122a28.482 28.482 0 0 1-19.948-8.126c-1.858-1.82-3.27-3.766-4.563-6.032l-.006.004c-1.292 2.27-3.092 4.215-4.954 6.037a28.5 28.5 0 0 1-19.948 8.12c-.934 0-1.906-.258-2.692-.528-1.092 11.372-1.553 22.24-1.716 30.164l-.002.045c-.02 4.024-.04 7.333-.06 11.93.21 23.86-2.363 77.334 10.52 90.473 19.964 4.655 56.7 6.775 93.555 6.788h.006c36.854-.013 73.59-2.133 93.554-6.788 12.883-13.14 10.31-66.614 10.52-90.474-.022-4.596-.04-7.905-.06-11.93l-.003-.045c-.162-7.926-.623-18.793-1.715-30.165-.786.27-1.757.528-2.692.528a28.5 28.5 0 0 1-19.948-8.12c-1.862-1.822-3.662-3.766-4.955-6.037l-.006-.004c-1.294 2.266-2.705 4.213-4.563 6.032a28.48 28.48 0 0 1-19.947 8.125c-7.748 0-14.778-3.11-19.906-8.123a28.025 28.025 0 0 1-4.78-6.155 27.99 27.99 0 0 1-4.736 6.155 28.49 28.49 0 0 1-19.95 8.124c-.27 0-.54-.012-.81-.02h-.007c-.27.008-.54.02-.813.02a28.49 28.49 0 0 1-19.95-8.123 27.992 27.992 0 0 1-4.736-6.155zm-20.486 26.49l-.002.01h.015c8.113.017 15.32 0 24.25 9.746 7.028-.737 14.372-1.105 21.722-1.094h.006c7.35-.01 14.694.357 21.723 1.094 8.93-9.747 16.137-9.73 24.25-9.746h.014l-.002-.01c3.833 0 19.166 0 29.85 30.007L210 165.244c8.504 30.624-2.723 31.373-16.727 31.4-20.768-.773-32.267-15.855-32.267-30.935-11.496 1.884-24.907 2.826-38.318 2.827h-.006c-13.412 0-26.823-.943-38.318-2.827 0 15.08-11.5 30.162-32.267 30.935-14.004-.027-25.23-.775-16.726-31.4L46.85 124.08C57.534 94.073 72.867 94.073 76.7 94.073zm45.985 23.582v.006c-.02.02-21.863 20.08-25.79 27.215l14.304-.573v12.474c0 .584 5.74.346 11.486.08h.006c5.744.266 11.485.504 11.485-.08v-12.474l14.304.573c-3.928-7.135-25.79-27.215-25.79-27.215v-.006l-.003.002z"/>
-                    </svg>
-                </a>
-                <a href="mailto:Blindsidedgames@outlook.com"> <!-- email -->
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="1 1 5 5">
-                        <!-- <path style="fill:red" d="M.853 3.062h5.12v2.415H.853z"/> -->
-                        <path style="fill: var(--colour-black)" d="m3.413 4.589 2.56-1.277v2.661H.853V3.312z"/>
-                        <path style="fill: var(--colour-black)" d="M3.413 1.341.853 2.62v.688h5.12v-.688z"/>
-                    </svg>
-                </a>
-            </section>
-        </main>
-        <footer>
-            <p>All rights reserved &copy; Blindsided Games 2022 / <a class="text-white" href="./policy.html">Policy</a></p>
-        </footer>
-    </body>
+        </section>
+        <section class="socials">
+            <a href="https://discord.gg/6HF6fuat4v" target="_blank">
+                <!-- discord -->
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 96" style="fill: var(--colour-black)">
+                    <path
+                        d="M107.7,8.07A105.15,105.15,0,0,0,81.47,0a72.06,72.06,0,0,0-3.36,6.83A97.68,97.68,0,0,0,49,6.83,72.37,72.37,0,0,0,45.64,0,105.89,105.89,0,0,0,19.39,8.09C2.79,32.65-1.71,56.6.54,80.21h0A105.73,105.73,0,0,0,32.71,96.36,77.7,77.7,0,0,0,39.6,85.25a68.42,68.42,0,0,1-10.85-5.18c.91-.66,1.8-1.34,2.66-2a75.57,75.57,0,0,0,64.32,0c.87.71,1.76,1.39,2.66,2a68.68,68.68,0,0,1-10.87,5.19,77,77,0,0,0,6.89,11.1A105.25,105.25,0,0,0,126.6,80.22h0C129.24,52.84,122.09,29.11,107.7,8.07ZM42.45,65.69C36.18,65.69,31,60,31,53s5-12.74,11.43-12.74S54,46,53.89,53,48.84,65.69,42.45,65.69Zm42.24,0C78.41,65.69,73.25,60,73.25,53s5-12.74,11.44-12.74S96.23,46,96.12,53,91.08,65.69,84.69,65.69Z" />
+                </svg>
+            </a>
+            <a href="https://twitter.com/BlindsidedGames" target="_blank">
+                <!-- twitter -->
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 245 205" style="fill: var(--colour-black)">
+                    <path
+                        d="M221.95,51.29c0.15,2.17,0.15,4.34,0.15,6.53c0,66.73-50.8,143.69-143.69,143.69v-0.04   C50.97,201.51,24.1,193.65,1,178.83c3.99,0.48,8,0.72,12.02,0.73c22.74,0.02,44.83-7.61,62.72-21.66   c-21.61-0.41-40.56-14.5-47.18-35.07c7.57,1.46,15.37,1.16,22.8-0.87C27.8,117.2,10.85,96.5,10.85,72.46c0-0.22,0-0.43,0-0.64   c7.02,3.91,14.88,6.08,22.92,6.32C11.58,63.31,4.74,33.79,18.14,10.71c25.64,31.55,63.47,50.73,104.08,52.76   c-4.07-17.54,1.49-35.92,14.61-48.25c20.34-19.12,52.33-18.14,71.45,2.19c11.31-2.23,22.15-6.38,32.07-12.26   c-3.77,11.69-11.66,21.62-22.2,27.93c10.01-1.18,19.79-3.86,29-7.95C240.37,35.29,231.83,44.14,221.95,51.29z" />
+                </svg>
+            </a>
+            <a href="https://www.youtube.com/channel/UCaXTMEgs5frcTPvw9xq6NFw" target="_blank">
+                <!-- youtube -->
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 158 110">
+                    <path fill="var(--colour-black)"
+                        d="M154.3,17.5c-1.8-6.7-7.1-12-13.8-13.8c-12.1-3.3-60.8-3.3-60.8-3.3S31,0.5,18.9,3.8    c-6.7,1.8-12,7.1-13.8,13.8C1.9,29.7,1.9,55,1.9,55s0,25.3,3.3,37.5c1.8,6.7,7.1,12,13.8,13.8c12.1,3.3,60.8,3.3,60.8,3.3    s48.7,0,60.8-3.3c6.7-1.8,12-7.1,13.8-13.8c3.3-12.1,3.3-37.5,3.3-37.5S157.6,29.7,154.3,17.5z" />
+                    <polygon fill="var(--colour-white)" points="64.2,78.4 104.6,55 64.2,31.6" />
+                </svg>
+            </a>
+            <a href="https://blindsidedgames.itch.io/" target="_blank">
+                <!-- itchio -->
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 245.371 220.736" style="fill: var(--colour-black)">
+                    <path
+                        d="M31.99 1.365C21.287 7.72.2 31.945 0 38.298v10.516C0 62.144 12.46 73.86 23.773 73.86c13.584 0 24.902-11.258 24.903-24.62 0 13.362 10.93 24.62 24.515 24.62 13.586 0 24.165-11.258 24.165-24.62 0 13.362 11.622 24.62 25.207 24.62h.246c13.586 0 25.208-11.258 25.208-24.62 0 13.362 10.58 24.62 24.164 24.62 13.585 0 24.515-11.258 24.515-24.62 0 13.362 11.32 24.62 24.903 24.62 11.313 0 23.773-11.714 23.773-25.046V38.298c-.2-6.354-21.287-30.58-31.988-36.933C180.118.197 157.056-.005 122.685 0c-34.37.003-81.228.54-90.697 1.365zm65.194 66.217a28.025 28.025 0 0 1-4.78 6.155c-5.128 5.014-12.157 8.122-19.906 8.122a28.482 28.482 0 0 1-19.948-8.126c-1.858-1.82-3.27-3.766-4.563-6.032l-.006.004c-1.292 2.27-3.092 4.215-4.954 6.037a28.5 28.5 0 0 1-19.948 8.12c-.934 0-1.906-.258-2.692-.528-1.092 11.372-1.553 22.24-1.716 30.164l-.002.045c-.02 4.024-.04 7.333-.06 11.93.21 23.86-2.363 77.334 10.52 90.473 19.964 4.655 56.7 6.775 93.555 6.788h.006c36.854-.013 73.59-2.133 93.554-6.788 12.883-13.14 10.31-66.614 10.52-90.474-.022-4.596-.04-7.905-.06-11.93l-.003-.045c-.162-7.926-.623-18.793-1.715-30.165-.786.27-1.757.528-2.692.528a28.5 28.5 0 0 1-19.948-8.12c-1.862-1.822-3.662-3.766-4.955-6.037l-.006-.004c-1.294 2.266-2.705 4.213-4.563 6.032a28.48 28.48 0 0 1-19.947 8.125c-7.748 0-14.778-3.11-19.906-8.123a28.025 28.025 0 0 1-4.78-6.155 27.99 27.99 0 0 1-4.736 6.155 28.49 28.49 0 0 1-19.95 8.124c-.27 0-.54-.012-.81-.02h-.007c-.27.008-.54.02-.813.02a28.49 28.49 0 0 1-19.95-8.123 27.992 27.992 0 0 1-4.736-6.155zm-20.486 26.49l-.002.01h.015c8.113.017 15.32 0 24.25 9.746 7.028-.737 14.372-1.105 21.722-1.094h.006c7.35-.01 14.694.357 21.723 1.094 8.93-9.747 16.137-9.73 24.25-9.746h.014l-.002-.01c3.833 0 19.166 0 29.85 30.007L210 165.244c8.504 30.624-2.723 31.373-16.727 31.4-20.768-.773-32.267-15.855-32.267-30.935-11.496 1.884-24.907 2.826-38.318 2.827h-.006c-13.412 0-26.823-.943-38.318-2.827 0 15.08-11.5 30.162-32.267 30.935-14.004-.027-25.23-.775-16.726-31.4L46.85 124.08C57.534 94.073 72.867 94.073 76.7 94.073zm45.985 23.582v.006c-.02.02-21.863 20.08-25.79 27.215l14.304-.573v12.474c0 .584 5.74.346 11.486.08h.006c5.744.266 11.485.504 11.485-.08v-12.474l14.304.573c-3.928-7.135-25.79-27.215-25.79-27.215v-.006l-.003.002z" />
+                </svg>
+            </a>
+            <a href="mailto:Blindsidedgames@outlook.com">
+                <!-- email -->
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="1 1 5 5">
+                    <!-- <path style="fill:red" d="M.853 3.062h5.12v2.415H.853z"/> -->
+                    <path style="fill: var(--colour-black)" d="m3.413 4.589 2.56-1.277v2.661H.853V3.312z" />
+                    <path style="fill: var(--colour-black)" d="M3.413 1.341.853 2.62v.688h5.12v-.688z" />
+                </svg>
+            </a>
+        </section>
+    </main>
+    <footer>
+        <p>All rights reserved &copy; Blindsided Games 2022 / <a class="text-white" href="./policy.html">Policy</a></p>
+    </footer>
+</body>
+
 </html>
