--- a/index.html
+++ b/index.html
@@ -1,42 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="apple-itunes-app" content="app-id=1622522530">
-    <meta name="theme-color" content="#94498d" media="(prefers-color-scheme: light)">
-    <meta name="theme-color" content="#0ee945" media="(prefers-color-scheme: dark)">
+    <meta name="theme-color" content="#8E8E93" media="(prefers-color-scheme: light)">
+    <meta name="theme-color" content="#48484A" media="(prefers-color-scheme: dark)">
     <link rel="shortcut icon" href="./img/logo.jpg" type="image/jpg">
     <title>Games | Blindsided Games </title>
     <link rel="stylesheet" href="./style.css">
     <!-- <script src="./main.js"></script> -->
 </head>
-    <body>
-        <header>
-            <a class="logo" href="./index.html"><img src="./img/logo.jpg" alt="Blindsided Games"></a>
-            <div class="tabs">
-                <a href="./index.html" class="tab-active">Games</a>
-                <a href="./about.html">About</a>
-                <a href="./contact.html">Contact</a>
-            </div>
-        </header>
-        <main>
-            <section class="games">
+
+<body>
+    <header>
+        <a class="logo" href="./index.html"><img src="./img/logo.jpg" alt="Blindsided Games"></a>
+        <div class="tabs">
+            <a href="./index.html" class="tab-active">Games</a>
+            <a href="./about.html">About</a>
+            <a href="./contact.html">Contact</a>
+        </div>
+    </header>
+    <main>
+        <section class="games">
+            <a href="./games/rocketmania.html">
                 <article class="game-widget" role="article" aria-label="rocket mania article">
                     <img src="./img/RocketMania.png" alt="rocket mania">
                     <h3 role="text" aria-label="game title">Rocket Mania</h3>
                     <p role="contentinfo" aria-label="game genre">RACING, EXPLORING, 2D PLATFORMER</p>
                 </article>
+            </a>
+            <a href="./games/idle-spaceflight.html">
                 <article class="game-widget" role="article" aria-label="idle spaceflight article">
                     <img src="./img/IdleSpaceflight.png" alt="tower defense">
                     <h3 role="text" aria-label="game title">Idle Space-Fight</h3>
                     <p role="contentinfo" aria-label="game genre">INCREMENTAL, STRATEGY</p>
                 </article>
-            </section>
-        </main>
-        <footer>
-            <p>All rights reserved &copy; Blindsided Games 2022 / <a class="text-white" href="./policy.html">Policy</a></p>
-        </footer>
-    </body>
+            </a>
+        </section>
+    </main>
+    <footer>
+        <p>All rights reserved &copy; Blindsided Games 2022 / <a class="text-link" href="./policy.html">Policy</a></p>
+    </footer>
+</body>
+
 </html>
