--- a/about.html
+++ b/about.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#8E8E93" media="(prefers-color-scheme: light)">
+    <meta name="theme-color" content="#48484A" media="(prefers-color-scheme: dark)">
     <link rel="shortcut icon" href="./img/logo.jpg" type="image/jpg">
     <title>About | Blindsided Games </title>
     <link rel="stylesheet" href="./style.css">
