--- a/games/rocketmania.html
+++ b/games/rocketmania.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#8E8E93" media="(prefers-color-scheme: light)">
+    <meta name="theme-color" content="#48484A" media="(prefers-color-scheme: dark)">
     <meta name="apple-itunes-app" content="app-id=1622522530">
     <link rel="shortcut icon" href="../img/logo.jpg" type="image/jpg">
     <title>RocektMania | Blindsided Games </title>
