--- a/games/ISFPolicy.html
+++ b/games/ISFPolicy.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <a class="logo" href="./index.html"><img src="../img/logo.jpg" alt="Blindsided Games"></a>
+        <a class="logo" href="../index.html"><img src="../img/logo.jpg" alt="Blindsided Games"></a>
         <div class="tabs">
             <a href="../index.html">Games</a>
             <a href="../about.html">About</a>
