--- a/games/idle-spaceflight.html
+++ b/games/idle-spaceflight.html
@@ -25,7 +25,7 @@
     </header>
     <main>
         Idle Spaceflight is available on iOS!
-        <a href="./ISFPolicy.html" rel="external nofollow noopener" target="_blank">Privacy Policy</a>
+        <a href="./ISFPolicy.html>Privacy Policy</a>
     </main>
     <footer>
         <p>All rights reserved &copy; Blindsided Games 2022 / <a class="tab-active" href="../policy.html">Policy</a></p>
