--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#8E8E93" media="(prefers-color-scheme: light)">
-    <meta name="theme-color" content="#48484A" media="(prefers-color-scheme: dark)">
+    <meta name="theme-color" content="#f0f0f5" media="(prefers-color-scheme: light)">
+    <meta name="theme-color" content="#18181b" media="(prefers-color-scheme: dark)">
     <link rel="shortcut icon" href="./img/logo.jpg" type="image/jpg">
     <title>Games | Blindsided Games </title>
     <link rel="stylesheet" href="./style.css">
@@ -41,7 +41,7 @@
         </section>
     </main>
     <footer>
-        <p>All rights reserved &copy; Blindsided Games 2022 / <a class="text-link" href="./policy.html">Policy</a></p>
+        <p>All rights reserved &copy; Blindsided Games 2022 / <a class="link-nav" href="./policy.html">Policy</a></p>
     </footer>
 </body>
 
