--- a/about.html
+++ b/about.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#f0f0f5" media="(prefers-color-scheme: light)">
-    <meta name="theme-color" content="#18181b" media="(prefers-color-scheme: dark)">
+    <meta name="theme-color" content="hsl(240, 5%, 20%)" media="(prefers-color-scheme: light)">
+    <meta name="theme-color" content="hsl(240, 5%, 20%)" media="(prefers-color-scheme: dark)"> 
     <link rel="shortcut icon" href="./img/logo.jpg" type="image/jpg">
     <title>About | Blindsided Games </title>
     <link rel="stylesheet" href="./style.css">
