--- a/index.html
+++ b/index.html
@@ -33,8 +33,15 @@
             </a>
             <a href="./games/idle-spaceflight.html">
                 <article class="game-widget" role="article" aria-label="idle spaceflight article">
-                    <img src="./img/IdleSpaceflight.png" alt="tower defense">
+                    <img src="./img/IdleSpaceflight.png" alt="incremental">
                     <h3 role="text" aria-label="game title">Idle Space-Fight</h3>
+                    <p role="contentinfo" aria-label="game genre">INCREMENTAL, STRATEGY</p>
+                </article>
+            </a>
+            <a href="./games/idle-spaceflight.html">
+                <article class="game-widget" role="article" aria-label="idle spaceflight article">
+                    <img src="./img/IdleDysonSwarm.png" alt="incremental">
+                    <h3 role="text" aria-label="game title">Idle Dyson Swarm</h3>
                     <p role="contentinfo" aria-label="game genre">INCREMENTAL, STRATEGY</p>
                 </article>
             </a>
