--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <p role="contentinfo" aria-label="game genre">INCREMENTAL, STRATEGY</p>
                 </article>
             </a>
-            <a href="./games/idle-spaceflight.html">
+            <a href="./games/idledysonswarm.html">
                 <article class="game-widget" role="article" aria-label="idle spaceflight article">
                     <img src="./img/IdleDysonSwarm.png" alt="incremental">
                     <h3 role="text" aria-label="game title">Idle Dyson Swarm</h3>
