added pages for new games
updated links and pages, added patreon link, updated about page.

--- a/games/rocketmania.html
+++ b/games/rocketmania.html
@@ -19,15 +19,22 @@
         <a class="logo" href="../index.html"><img src="../img/logo.jpg" alt="Blindsided Games"></a>
         <div class="tabs">
             <a href="../index.html">Games</a>
+            <a href="https://www.patreon.com/BlindsidedGames">Patreon</a>
             <a href="../about.html">About</a>
             <a href="../contact.html">Contact</a>
         </div>
     </header>
     <main>
-        Rocket Mania is available on Steam, iOS, and Android!
+        Rocket Mania is available on the following platforms!
+        <div class="storeLinks">
+            <FONT COLOR= --colour-naf><a href="https://apps.apple.com/au/app/rocketmania/id1622522530">iOS</a> |
+                <a href="https://play.google.com/store/apps/details?id=com.BlindsidedGames.RocketMania&hl=en&gl=US">Google Play</a> |
+                <a href="https://store.steampowered.com/app/1949810/Rocket_Mania/">Steam</a></FONT>
+        </div><br>
+        <a href="./Policy.html">Privacy Policy</a>
     </main>
     <footer>
-        <p>All rights reserved &copy; Blindsided Games 2022 / <a class="tab-active" href="../policy.html">Policy</a></p>
+        <p>All rights reserved &copy; Blindsided Games 2022 / <a class="tab-active" href="../games/policy.html">Policy</a></p>
     </footer>
 </body>
 
