--- a/index.html
+++ b/index.html
@@ -18,24 +18,19 @@
         <a class="logo" href="./index.html"><img src="./img/logo.jpg" alt="Blindsided Games"></a>
         <div class="tabs">
             <a href="./index.html" class="tab-active">Games</a>
+            <a href="https://www.patreon.com/BlindsidedGames">Patreon</a>
             <a href="./about.html">About</a>
             <a href="./contact.html">Contact</a>
+            
         </div>
     </header>
     <main>
         <section class="games">
-            <a href="./games/rocketmania.html">
-                <article class="game-widget" role="article" aria-label="rocket mania article">
-                    <img src="./img/RocketMania.png" alt="rocket mania">
-                    <h3 role="text" aria-label="game title">Rocket Mania</h3>
-                    <p role="contentinfo" aria-label="game genre">RACING, EXPLORING, 2D PLATFORMER</p>
-                </article>
-            </a>
-            <a href="./games/idle-spaceflight.html">
-                <article class="game-widget" role="article" aria-label="idle spaceflight article">
-                    <img src="./img/IdleSpaceflight.png" alt="incremental">
-                    <h3 role="text" aria-label="game title">Idle Space-Fight</h3>
-                    <p role="contentinfo" aria-label="game genre">INCREMENTAL, STRATEGY</p>
+            <a href="./games/skrimpfall.html">
+                <article class="game-widget" role="article" aria-label="skrimp fall">
+                    <img src="./img/SkrimpFall.png" alt="incremental">
+                    <h3 role="text" aria-label="game title">Skrimp Fall</h3>
+                    <p role="contentinfo" aria-label="game genre">INCREMENTAL, SIMULATION, PHYSICS</p>
                 </article>
             </a>
             <a href="./games/idledysonswarm.html">
@@ -45,10 +40,31 @@
                     <p role="contentinfo" aria-label="game genre">INCREMENTAL, STRATEGY</p>
                 </article>
             </a>
+            <a href="./games/idlesheepcounting.html">
+                <article class="game-widget" role="article" aria-label="idle sheep counting">
+                    <img src="./img/unnamed.webp" alt="incremental">
+                    <h3 role="text" aria-label="game title">Idle Sheep Counting</h3>
+                    <p role="contentinfo" aria-label="game genre">INCREMENTAL, STRATEGY</p>
+                </article>
+            </a>
+            <a href="./games/idle-spaceflight.html">
+                <article class="game-widget" role="article" aria-label="idle spaceflight article">
+                    <img src="./img/IdleSpaceflight.png" alt="incremental">
+                    <h3 role="text" aria-label="game title">Idle Space-Fight</h3>
+                    <p role="contentinfo" aria-label="game genre">INCREMENTAL, STRATEGY</p>
+                </article>
+            </a>
+            <a href="./games/rocketmania.html">
+                <article class="game-widget" role="article" aria-label="rocket mania article">
+                    <img src="./img/RocketMania.png" alt="rocket mania">
+                    <h3 role="text" aria-label="game title">Rocket Mania</h3>
+                    <p role="contentinfo" aria-label="game genre">RACING, EXPLORING, 2D PLATFORMER</p>
+                </article>
+            </a>
         </section>
     </main>
     <footer>
-        <p>All rights reserved &copy; Blindsided Games 2022 / <a class="link-nav" href="./policy.html">Policy</a></p>
+        <p>All rights reserved &copy; Blindsided Games 2023 / <a class="link-nav" href="./games/policy.html">Policy</a></p>
     </footer>
 </body>
 
