--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,7 @@
             <a class="logo" href="./index.html"><img src="./img/logo.jpg" alt="Blindsided Games"></a>
             <div class="tabs">
                 <a href="./index.html">Games</a>
+                <a href="https://www.patreon.com/BlindsidedGames">Patreon</a>
                 <a href="./about.html">About</a>
                 <a href="./contact.html" class="tab-active">Contact</a>
             </div>
