--- a/games/idle-spaceflight.html
+++ b/games/idle-spaceflight.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#48484A" media="(prefers-color-scheme: dark)">
     <meta name="apple-itunes-app" content="app-id=1538856127">
     <link rel="shortcut icon" href="../img/logo.jpg" type="image/jpg">
-    <title>RocektMania | Blindsided Games </title>
+    <title>Idle Spaceflight | Blindsided Games </title>
     <link rel="stylesheet" href="../style.css">
     <!-- <script src="./main.js"></script> -->
 </head>
@@ -19,16 +19,20 @@
         <a class="logo" href="../index.html"><img src="../img/logo.jpg" alt="Blindsided Games"></a>
         <div class="tabs">
             <a href="../index.html">Games</a>
+            <a href="https://www.patreon.com/BlindsidedGames">Patreon</a>
             <a href="../about.html">About</a>
             <a href="../contact.html">Contact</a>
         </div>
     </header>
     <main>
-        Idle Spaceflight is available on iOS!
-        <a href="./ISFPolicy.html">Privacy Policy</a>
+        Idle Spaceflight is available on the following platforms!
+        <div class="storeLinks">
+            <FONT COLOR= --colour-naf><a href="https://apps.apple.com/au/app/idle-spaceflight/id1538856127">iOS</a></FONT>
+        </div><br>
+        <a href="./Policy.html">Privacy Policy</a>
     </main>
     <footer>
-        <p>All rights reserved &copy; Blindsided Games 2022 / <a class="tab-active" href="../policy.html">Policy</a></p>
+        <p>All rights reserved &copy; Blindsided Games 2022 / <a class="tab-active" href="../games/policy.html">Policy</a></p>
     </footer>
 </body>
 
