--- a/games/idledysonswarm.html
+++ b/games/idledysonswarm.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#48484A" media="(prefers-color-scheme: dark)">
     <meta name="apple-itunes-app" content="app-id=1631060225">
     <link rel="shortcut icon" href="../img/logo.jpg" type="image/jpg">
-    <title>RocektMania | Blindsided Games </title>
+    <title>Idle Dyson Swarm | Blindsided Games </title>
     <link rel="stylesheet" href="../style.css">
     <!-- <script src="./main.js"></script> -->
 </head>
@@ -19,16 +19,23 @@
         <a class="logo" href="../index.html"><img src="../img/logo.jpg" alt="Blindsided Games"></a>
         <div class="tabs">
             <a href="../index.html">Games</a>
+            <a href="https://www.patreon.com/BlindsidedGames">Patreon</a>
             <a href="../about.html">About</a>
             <a href="../contact.html">Contact</a>
         </div>
     </header>
     <main>
-        Idle Dyson Swarm will be vailable on iOS and Google Play
-        <a href="./IDSPolicy.html">Privacy Policy</a>
+        Idle Dyson Swarm is available on the following platforms!
+        <div class="storeLinks">
+            <FONT COLOR= --colour-naf><a href="https://apps.apple.com/au/app/idle-dyson-swarm/id1631060225">iOS</a> | 
+            <a href="https://play.google.com/store/apps/details?id=com.blindsidedgames.idledysonswarm&hl=en&gl=US">Google Play</a> | 
+            <a href="https://apps.apple.com/au/app/idle-dyson-swarm/id1631060225">Mac</a> | 
+                <a href="https://blindsidedgames.itch.io/idle-dyson-swarm">PC</a></FONT>
+        </div><br>
+        <a href="./Policy.html">Privacy Policy</a>
     </main>
     <footer>
-        <p>All rights reserved &copy; Blindsided Games 2022 / <a class="tab-active" href="../policy.html">Policy</a></p>
+        <p>All rights reserved &copy; Blindsided Games 2022 / <a class="tab-active" href="../games/policy.html">Policy</a></p>
     </footer>
 </body>
 
