Moving  skrimpfall game

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <section class="games">
             <a href="./games/skrimpfall.html">
                 <article class="game-widget" role="article" aria-label="skrimp fall">
-                    <img src="./img/SkrimpFall.png" alt="incremental">
+                    <img src="./img/SkrimpFall1.gif" alt="incremental">
                     <h3 role="text" aria-label="game title">Skrimp Fall</h3>
                     <p role="contentinfo" aria-label="game genre">INCREMENTAL, SIMULATION, PHYSICS</p>
                 </article>
