--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <a href="./games/idle-spaceflight.html">
                 <article class="game-widget" role="article" aria-label="idle spaceflight article">
                     <img src="./img/IdleSpaceflight.png" alt="incremental">
-                    <h3 role="text" aria-label="game title">Idle Space-Fight</h3>
+                    <h3 role="text" aria-label="game title">Idle Space-Flight</h3>
                     <p role="contentinfo" aria-label="game genre">INCREMENTAL, STRATEGY</p>
                 </article>
             </a>
