--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </section>
     </main>
     <footer>
-        <p>All rights reserved &copy; Blindsided Games 2023 / <a class="link-nav" href="./games/policy.html">Policy</a></p>
+        <p>All rights reserved &copy; Blindsided Games 2023 / <a class="link-nav" href="./games/Policy.html">Policy</a></p>
     </footer>
 </body>
 
