--- a/games/Policy.html
+++ b/games/Policy.html
@@ -15,12 +15,8 @@
 
 <body>
     <header>
-        <a class="logo" href="../index.html"><img src="../img/logo.jpg" alt="Blindsided Games"></a>
+        <a class="logo" href=".https://www.blindsidedgames.com"><img src="../img/logo.jpg" alt="Blindsided Games"></a>
         <div class="tabs">
-            <a href="../index.html">Games</a>
-            <a href="https://www.patreon.com/BlindsidedGames">Patreon</a>
-            <a href="../about.html">About</a>
-            <a href="../contact.html">Contact</a>
         </div>
     </header>
     <main>
