--- a/games/Policy.html
+++ b/games/Policy.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <a class="logo" href="https://www.blindsidedgames.com"><img src="../img/logo.jpg" alt="Blindsided Games"></a>
+        <a class="logo" href="https://www.blindsidedgames.com"><img src="../img/logo.jpg" alt="Blindsided Games"></a> <p>Home</p>
         <div class="tabs">
         </div>
     </header>
