--- a/games/Policy.html
+++ b/games/Policy.html
@@ -15,9 +15,9 @@
 
 <body>
     <header>
-        <a class="logo" href="https://www.blindsidedgames.com"><img src="../img/logo.jpg" alt="Blindsided Games"></a> <p>Home<a href="https://www.blindsidedgames.com/contact.html"
+        <a class="logo" href="https://www.blindsidedgames.com"><img src="../img/logo.jpg" alt="Blindsided Games"></a> <a href="https://www.blindsidedgames.com/contact.html"
                         rel="external nofollow noopener"
-                        target="_blank">https://www.blindsidedgames.com/contact.html</a></p>
+                        target="_blank">Home</a>
         <div class="tabs">
         </div>
     </header>
