--- a/games/Policy.html
+++ b/games/Policy.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <a class="logo" href="https://www.blindsidedgames.com"><img src="../img/logo.jpg" alt="Blindsided Games"></a> <a href="https://www.blindsidedgames.com/contact.html"
+        <a class="logo" href="https://www.blindsidedgames.com"><img src="../img/logo.jpg" alt="Blindsided Games"></a> <a href="https://www.blindsidedgames.com"
                         rel="external nofollow noopener"
                         target="_blank">Home</a>
         <div class="tabs">
