--- a/games/Policy.html
+++ b/games/Policy.html
@@ -224,7 +224,7 @@
         </ul>
     </main>
     <footer>
-        <p>All rights reserved &copy; Blindsided Games 2022 / <a class="tab-active" href="../policy.html">Policy</a></p>
+        <p>All rights reserved &copy; Blindsided Games 2022 / <a class="tab-active" href="https://blindsidedgames.github.io/BlindsidedGames/games/Policy.html">Policy</a></p>
     </footer>
 </body>
 
