--- a/games/Policy.html
+++ b/games/Policy.html
@@ -16,8 +16,7 @@
 <body>
     <header>
         <a class="logo" href="https://www.blindsidedgames.com"><img src="../img/logo.jpg" alt="Blindsided Games"></a> <a href="https://www.blindsidedgames.com"
-                        rel="external nofollow noopener"
-                        target="_blank">Home</a>
+                        rel="external nofollow noopener">Home</a>
         <div class="tabs">
         </div>
     </header>
