--- a/games/Policy.html
+++ b/games/Policy.html
@@ -15,8 +15,8 @@
 
 <body>
     <header>
-        <a class="logo" href="https://www.blindsidedgames.com"><img src="../img/logo.jpg" alt="Blindsided Games"></a> <a href="https://www.blindsidedgames.com"
-                        rel="external nofollow noopener">Home</a>
+        <a class="logo" href="https://www.blindsidedgames.com"><img src="../img/logo.jpg" alt="Blindsided Games"></a>
+        <a href="https://www.blindsidedgames.com">Home</a>
         <div class="tabs">
         </div>
     </header>
