--- a/games/skrimpfall.html
+++ b/games/skrimpfall.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#8E8E93" media="(prefers-color-scheme: light)">
-    <meta name="theme-color" content="#48484A" media="(prefers-color-scheme: dark)">
+    <meta name="theme-color" content="hsl(240, 12%, 98%)" media="(prefers-color-scheme: light)">
+    <meta name="theme-color" content="hsl(217.14, 91.3%, 4.5%)" media="(prefers-color-scheme: dark)">
     <meta name="apple-itunes-app" content="app-id=6447680173">
     <link rel="shortcut icon" href="../img/logo.jpg" type="image/jpg">
     <title>Skrimp Fall | Blindsided Games </title>
@@ -30,10 +30,10 @@
         <FONT COLOR= --colour-naf><a href="https://apps.apple.com/us/app/skrimp-fall/id6447680173">iOS</a> |
             <a href="https://play.google.com/store/apps/details?id=com.blindsidedgames.skrimpdrop">Google Play</a></FONT>
     </div><br>
-    <a href="./Policy.html">Privacy Policy</a>
+    <a href="../policy.html">Privacy Policy</a>
 </main>
 <footer>
-    <p>All rights reserved &copy; Blindsided Games 2022 / <a class="tab-active" href="../games/policy.html">Policy</a></p>
+    <p>All rights reserved &copy; Blindsided Games 2022 / <a class="link-nav" href="../policy.html">Policy</a></p>
 </footer>
 </body>
 
