--- a/games/ISFPolicy.html
+++ b/games/ISFPolicy.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#8E8E93" media="(prefers-color-scheme: light)">
-    <meta name="theme-color" content="#48484A" media="(prefers-color-scheme: dark)">
+    <meta name="theme-color" content="hsl(240, 12%, 98%)" media="(prefers-color-scheme: light)">
+    <meta name="theme-color" content="hsl(217.14, 91.3%, 4.5%)" media="(prefers-color-scheme: dark)">
     <link rel="shortcut icon" href="../img/logo.jpg" type="image/jpg">
     <title>Policy | Blindsided Games </title>
     <link rel="stylesheet" href="../style.css">
