--- a/policy.html
+++ b/policy.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="hsl(240, 5%, 20%)" media="(prefers-color-scheme: light)">
-    <meta name="theme-color" content="hsl(240, 5%, 20%)" media="(prefers-color-scheme: dark)"> 
+    <meta name="theme-color" content="hsl(240, 12%, 98%)" media="(prefers-color-scheme: light)">
+    <meta name="theme-color" content="hsl(217.14, 91.3%, 4.5%)" media="(prefers-color-scheme: dark)"> 
     <link rel="shortcut icon" href="./img/logo.jpg" type="image/jpg">
     <title>Policy | Blindsided Games </title>
     <link rel="stylesheet" href="./style.css">
@@ -14,12 +14,34 @@
     <body>
         <header>
             <a class="logo" href="./index.html"><img src="./img/logo.jpg" alt="Blindsided Games"></a>
+            <button class="menu-toggle" aria-label="Open navigation" onclick="document.body.dataset.navOpen = document.body.dataset.navOpen === 'true' ? 'false' : 'true'">
+                <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M4 6h16M4 12h16M4 18h16" stroke="currentColor" stroke-width="2" stroke-linecap="round"/></svg>
+            </button>
             <div class="tabs">
                 <a href="./index.html">Games</a>
+                <a href="https://www.patreon.com/BlindsidedGames" target="_blank" rel="noopener noreferrer">Patreon
+                    <svg class="icon-external" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+                        <path d="M14 3h7v7" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M21 3L10 14" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M14 7H5a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2v-9" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                </a>
                 <a href="./about.html">About</a>
                 <a href="./contact.html">Contact</a>
             </div>
         </header>
+        <nav class="mobile-nav" aria-label="Mobile navigation">
+            <a href="./index.html">Games</a>
+            <a href="https://www.patreon.com/BlindsidedGames" target="_blank" rel="noopener noreferrer">Patreon
+                <svg class="icon-external" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+                    <path d="M14 3h7v7" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M21 3L10 14" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M14 7H5a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2v-9" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+            </a>
+            <a href="./about.html">About</a>
+            <a href="./contact.html">Contact</a>
+        </nav>
         <main>
             I don't store your data for anything more than analytics and displaying ads in games. And I never ever store personal data.
             The only data that gets collected is your device ID if you click allow, I hope you will because I earn 10x as much from the ads you watch that way!
