Add new quiz sets and enhance UI for Quiz Night section
- Introduced a new "Quiz Night" call-to-action section in index.html to promote new quiz sets.
- Added three new general knowledge quizzes (VI, VII, VIII) with diverse categories in JSON format.
- Updated manifest.json to include the new quizzes for easy access.
- Modified quizzes.js to reverse the order of quizzes for display.
- Enhanced CSS styles for the new CTA section to improve layout and readability.

--- a/index.html
+++ b/index.html
@@ -64,6 +64,18 @@
             </div>
         </section>
 
+        <!-- Quiz Night CTA -->
+        <section class="home-cta">
+            <div class="cta-card glass">
+                <span class="pill pill-new">New quiz sets</span>
+                <h2>Quiz Night</h2>
+                <p>Grab friends or fly solo for a full evening of trivia. Each Quiz Night volume delivers 50 themed questions spanning pop culture, history, science, and more - now with fresh categories in volumes VI through VIII.</p>
+                <div class="store-links">
+                    <a class="btn btn-primary" href="./quizzes.html">Browse quizzes</a>
+                </div>
+            </div>
+        </section>
+
         <!-- All Games -->
         <section aria-label="All games" class="games-grid">
             <article class="game-card glass">
@@ -174,6 +186,19 @@
                         <a class="btn" href="https://apps.apple.com/au/app/rocketmania/id1622522530" target="_blank" rel="noopener">iOS</a>
                         <a class="btn" href="https://play.google.com/store/apps/details?id=com.BlindsidedGames.RocketMania&hl=en&gl=US" target="_blank" rel="noopener">Google Play</a>
                         <a class="btn" href="https://store.steampowered.com/app/1949810/Rocket_Mania/" target="_blank" rel="noopener">Steam</a>
+                    </div>
+                </div>
+            </article>
+
+            <article class="game-card glass">
+                <a class="cover-link" href="./games/edge-spawn-td.html" aria-label="Edge-Spawn TD prototype page">
+                    <img loading="lazy" decoding="async" src="./img/logo.jpg" alt="Edge-Spawn TD prototype cover image">
+                </a>
+                <div class="game-card-content">
+                    <h3>Edge-Spawn TD</h3>
+                    <p>Browser prototype tower defense</p>
+                    <div class="store-links">
+                        <a class="btn" href="./games/edge-spawn-td.html">Play prototype</a>
                     </div>
                 </div>
             </article>
